--- a/Video-Html.html
+++ b/Video-Html.html
@@ -6,19 +6,28 @@
 	
 	<body>
 	    <center><h1 style="background-color:lightblue;"> Playing video in HTML</h1></center>
-				
+		
+<p>
+Big Buck Bunny (code-named Peach) is a short computer-animated comedy film by the Blender Institute, part of the Blender Foundation.[6][7] Like the foundation's previous film Elephants Dream, the film was made using Blender, a free software application for animation made by the same foundation. It was released as an open-source film under Creative Commons License Attribution 
+<br>
+</p><img src="C:\Users\Cleveland Codes\Desktop\GitHub Practice\Video-HTML\Bigbuckbunny.jpg"
+		width="220" height="277" alt="Big Buck bunny">
+				<br>
 			<video width="600" controls>
             <source src="C:\Users\Cleveland Codes\Desktop\GitHub Practice\Video-HTML\mov_bbb.mp4" type="video/mp4">
             <source src="mov_bbb.ogg" type="video/ogg">
             Your browser does not support HTML5 video.
             </video>
-
+			
         <p>
         Video courtesy of 
        <! <a href="http://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>>
 		<a href="http://www.bigbuckbunny.org/">Big Buck Bunny</a>.
 		
         </p>
+		
+		<p>Using a embeded video from Youtube </p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/YE7VzlLtp-4" frameborder="0" allowfullscreen></iframe>
 
 
 
